[package]
name = "based-header"
version = "0.1.0"
edition = "2021"

# Shrank .wasm from 2.6MB to 403KB, mostly due to `strip = true`
[profile.release]
lto = true
opt-level = 's'
strip = true

[dependencies]
colored = "2"
ansi_term = "0.12"
unicode-width = "0.1.8"
zellij-tile = "0.37.2"
zellij-tile-utils = "0.37.2"
